--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -147,3 +147,11 @@
 	border-radius: 10px;
 	opacity:0.7;
 }
+@media screen and (max-width: 640px) {
+	.rg-caption p{
+		font-size:8px;
+	}
+	.rg-title{
+		
+	}
+}
