--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
-        <meta name="description" content="Responsive Image Gallery with jQuery" />
-        <meta name="keywords" content="jquery, carousel, image gallery, slider, responsive, flexible, fluid, resize, css3" />
-		<meta name="author" content="Codrops" />
+        <meta name="description" content="Tookie, the best way to browse and download the latest movies." />
+        <meta name="keywords" content="tookie, torrentz, torrents, movies, movie, download movies, sabarasaba, ignacio, rivas" />
+		<meta name="author" content="Ignacio Rivas" />
 		<link rel="shortcut icon" href="../favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="stylesheets/demo.css" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
@@ -43,6 +43,7 @@
 						<span class="rg-stars"></span>
 						<span class="rg-score"></span>
 					</div>
+					<div class="rg-format"></div>
 					<div class="rg-trailer">Watch Trailer</div>
 					<div class="rg-torrent"></div>
 				</div>
@@ -58,7 +59,6 @@
 		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
-
 		</script>
     </head>
     <body>
@@ -67,7 +67,6 @@
 				<h1>Tookie <span>torrentz on steroids</span></h1>
 				<div id="rg-gallery" class="rg-gallery">
 					<div class="rg-thumbs">
-						<!-- Elastislide Carousel Thumbnail Viewer -->
 						<div class="es-carousel-wrapper">
 							<div class="es-nav">
 								<span class="es-nav-prev">Previous</span>
@@ -76,12 +75,11 @@
 							<div class="es-carousel">
 								<ul>
 									<% p.forEach(function(movie){ %>
-										<li><a href="#"><img src="<%= movie.poster %>" data-large="<%= movie.poster %>" alt="" data-torrent="<%= movie.url %>" data-title="<%= movie.title %>" data-rating="<%= movie.rating %>" data-description="<%= movie.description %>" width="60" height="90"/></a></li>
+										<li><a href="#"><img src="<%= movie.poster %>" data-large="<%= movie.poster %>" alt="" data-torrent="<%= movie.url %>" data-title="<%= movie.title %>" data-rating="<%= movie.rating %>" data-description="<%= movie.description %>" data-format="<%= movie.format %>" width=	 "60" height="90"/></a></li>
 									<% }) %>
 								</ul>
 							</div>
 						</div>
-						<!-- End Elastislide Carousel Thumbnail Viewer -->
 					</div><!-- rg-thumbs -->
 				</div><!-- rg-gallery -->
 				<p class="sub">created by <a href="http://sabarasaba.github.com/" target="_blank">@sabarasaba</a></p>
