Added a new facebook share image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
         <meta name="description" content="Tookie, the best way to browse and download the latest movies." />
         <meta name="keywords" content="tookie, torrentz, torrents, movies, movie, download movies, sabarasaba, ignacio, rivas" />
 		<meta name="author" content="Ignacio Rivas" />
+		<meta property="og:image" content="images/tookie.png"/>
 		<link rel="shortcut icon" href="../favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="stylesheets/demo.css" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
