--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/demo.css" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/elastislide.css" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/tipsy.css" />
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
 		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css' />
 		<noscript>
@@ -98,6 +99,7 @@
 		<script type="text/javascript" src="javascripts/gallery.js"></script>
 		<script type="text/javascript" src="javascripts/js.js"></script>
 		<script type="text/javascript" src="javascripts/jquery.raty.min.js"></script>
+		<script type="text/javascript" src="javascripts/jquery.tipsy.js"></script>
 		<!-- Fancybox shit-->
 		<link rel="stylesheet" href="javascripts/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="javascripts/fancybox/jquery.fancybox.js"></script>
