--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,122 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Tookie</title>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
-        <meta name="description" content="Tookie, the best way to browse and download the latest movies." />
-        <meta name="keywords" content="tookie, torrentz, torrents, movies, movie, download movies, sabarasaba, ignacio, rivas" />
-		<meta name="author" content="Ignacio Rivas" />
-		<meta property="og:image" content="http://dl.com.dropbox/u/8474936/tookie.png"/>
-		<link rel="image_src" type="image/jpeg" href="http://dl.dropbox.com/u/8474936/tookie.png"/>
-		<link rel="shortcut icon" href="../favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="stylesheets/demo.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/elastislide.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/tipsy.css" />
-		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
-		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css' />
-		<noscript>
-			<style>
-				.es-carousel ul{
-					display:block;
-				}
-			</style>
-		</noscript>
-		<script id="img-wrapper-tmpl" type="text/x-jquery-tmpl">	
-			<div class="rg-image-wrapper">
-					<div class="rg-image-nav">
-						<a href="#" class="rg-image-nav-prev">Previous Image</a>
-						<a href="#" class="rg-image-nav-next">Next Image</a>
-					</div>
-				<div class="rg-image-holder">
-					<div class="rg-image"></div>
-					<div class="rg-loading"></div>
-				</div>
-				<div class="rg-content-wrapper">
-					<div class="rg-title"></div>
-					<div class="rg-caption-wrapper">
-						<div class="rg-caption" style="display:none;">
-							<p></p>
-						</div>
-					</div>
-					<div class="rg-rating">
-						<span>Rating:</span>
-						<span class="rg-stars"></span>
-						<span class="rg-score"></span>
-					</div>
-					<div class="rg-format"></div>
-					<div class="rg-genre"></div>
-					<div class="rg-released"></div>
-					<div class="rg-cast"></div>
-					<div class="rg-trailer">Watch Trailer</div>
-					<div class="rg-torrent"></div>
-				</div>
-			</div>
-		</script>
-		<script type="text/javascript">
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-33312532-1']);
-		  _gaq.push(['_trackPageview']);
+<% layout('layout') -%>
+<% stylesheet('css/style.css') -%>
+<% script('js/index.view.js') -%>
 
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-		</script>
-    </head>
-    <body>
-		<div class="container">			
-			<div class="content">
-				<h1>Tookie <span>torrentz on steroids</span></h1>
-				<div id="rg-gallery" class="rg-gallery">
-					<div class="rg-thumbs">
-						<div class="es-carousel-wrapper">
-							<div class="es-nav">
-								<span class="es-nav-prev">Previous</span>
-								<span class="es-nav-next">Next</span>
-							</div>
-							<div class="es-carousel">
-								<ul>
-									<% p.forEach(function(movie){ %>
-										<li><a href="#"><img src="<%= movie.poster_small %>" data-large="<%= movie.poster %>" alt="" data-torrent="<%= movie.url %>" data-title="<%= movie.title %>" data-rating="<%= movie.rating %>" data-genre="<%= movie.genre %>" data-description="<%= movie.description %>" data-format="<%= movie.format %>" data-released="<%= movie.release_date %>" data-cast="<%= movie.cast %>" width="60" height="90"/></a></li>
-									<% }) %>
-								</ul>
-							</div>
-						</div>
-					</div><!-- rg-thumbs -->
-					<div class="loading"></div>
-				</div><!-- rg-gallery -->
-				<p class="sub">created by <a href="http://sabarasaba.github.com/" target="_blank">@sabarasaba</a></p>
-			</div><!-- content -->
-		</div><!-- container -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.tmpl.min.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.elastislide.js"></script>
-		<script type="text/javascript" src="javascripts/gallery.js"></script>
-		<script type="text/javascript" src="javascripts/js.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.raty.min.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.tipsy.js"></script>
-		<!-- Fancybox shit-->
-		<link rel="stylesheet" href="javascripts/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="javascripts/fancybox/jquery.fancybox.js"></script>
-		<link rel="stylesheet" href="javascripts/fancybox/helpers/jquery.fancybox-buttons.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="javascripts/fancybox/helpers/jquery.fancybox-buttons.js"></script>
-		<script type="text/javascript" src="javascripts/fancybox/helpers/jquery.fancybox-media.js"></script>
-		<script type="text/javascript">
-			$(document).ready(function() {
-				$('.fancybox-media').fancybox({
-						openEffect  : 'none',
-						closeEffect : 'none',
-						helpers : {
-							media : {}
-						}
-				});
-			});
-		</script>
+<nav class="search-main">
+	<ul class="tabs">
+    	<li class="left blank">Search by</li>
+    	<li class="item title active"><a href="javascript:;" class="item-a">Title</a></li>
+        <li class="item quality"><a href="javascript:;" class="item-a">Quality</a></li>
+        <li class="item genre"><a href="javascript:;" class="item-a">Genre</a></li>
 
-    </body>
-</html>
+    </ul>
+
+	<br class="clr" />
+
+	<div class="cont">        
+    	<div class="main hidden" id="qualitytab">
+    		<div id="query" style="display: inline-block;">
+    			All
+    		</div>
+    		<div class="opts">
+                <a href="#" class="gui" id="dropdownicon"></a>
+            </div>
+        </div>
+        <div class="main hidden" id="genretab">
+        	<div id="query" style="display: inline-block;">
+                All
+            </div>
+            <div class="opts">
+                <a href="#" class="gui" id="dropdownicon"></a>
+            </div>
+        </div>
+        <div class="main" id="titletab">
+        	<input type="text" id="query" name="query" placeholder="Type in the title of the movie" />
+        	    <div class="opts">
+                	<a href="javascript:void(0);" class="gui" id="searchicon"></a>
+                </div>
+        </div>
+
+        <br style="line-height:10px; height:10px;" />
+	</div>
+</nav>
+<section>
+		<% m.forEach(function(movie){ %>
+			<article>
+				<div class="qualityContainer">
+					<% if (movie.format == 'screener') {%>
+						<span class="diag red"><%= movie.format %></span>
+					<% } %>
+				</div>
+				<a href="/m/<%= movie._id %>">
+					<img src="<%= movie.poster_small %>" style="width:185px;height:279px"/>
+					<div>
+						<span><%= movie.release_date %></span>
+						<p>Score: <%= movie.rating %></p>
+						<p>Genre: <%= movie.genre %></p>
+					</div>
+				</a>
+			</article>
+		<% }); %>
+</section>
