--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,8 @@
         <br style="line-height:10px; height:10px;" />
 	</div>
 </nav>
-<section>
+
+<section id="contentHolder">
 		<% m.forEach(function(movie){ %>
 			<article>
 				<div class="qualityContainer">
@@ -49,7 +50,7 @@
 					<% } %>
 				</div>
 				<a href="/m/<%= movie._id %>">
-					<img src="<%= movie.poster_small %>" style="width:185px;height:279px"/>
+					<img src="<%= movie.poster %>" style="width:185px;height:279px"/>
 					<div>
 						<span><%= movie.release_date %></span>
 						<p>Score: <%= movie.rating %></p>
@@ -59,3 +60,6 @@
 			</article>
 		<% }); %>
 </section>
+
+
+<div id="loader" style="display:none;"><!--<center><img src="/img/ajax-loader.gif"></center>--></div>
