--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <title><%= title %> Tookie</title>
+        <title><%= title %> / Tookie</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="shortcut icon" href="../favicon.ico"> 
 
@@ -105,62 +105,4 @@
 
         <script src="../js/movie.view.js"></script>
     </body>
-</html>        
-
-
-<!--
-
-        <div class="row">
-            <div class="table t1 userprofile" style="margin-bottom:0;">
-                <div class="header">
-                    <div class="title"><%= mf.title %></div>
-                </div>
-                <div class="content">
-                    <table width="100%" style="margin-bottom:1px;">
-                      <tr style="background:#171717;color:#4CBFFF">
-                        <td width="17%" align="center">Poster</td>
-                        <td colspan="4" class="border-left" align="center">Info</td>
-                        <td width="26%" class="border-left" align="center">Torrent</td>
-                      </tr>
-                      <tr>
-                        <td rowspan="6" align="center" style="vertical-align:top">
-                                <img src="<%= mf.poster %>" width="95%" height="90%"/>
-                        </td>
-                        <td width="13%" class="border-left grey">Genre:</td>
-                        <td width="13%" align="right"><%= mf.genre %></td>
-                        <td width="13%" class="border-left grey">Rating:</td>
-                        <td width="13%" align="right"><%= mf.rating %></td>
-                        <td rowspan="3" align="center" class="border-left" style="vertical-align:middle">
-                            <a href="<%= mf.url %>" class="movieLink"> Download</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="border-left grey">Released:</td>
-                        <td align="right"><%= new Date(mf.release_date).getFullYear() %></td>
-                        <td class="border-left grey">Format:</td>
-                        <td align="right"><%= mf.format %></td>
-
-                      </tr>
-                      <tr style="background:#171717;color:#4CBFFF">
-                        <td colspan="4" align="center" class="border-left">Description</td>
-                      </tr>
-                      <tr>
-                        <td colspan="4" align="left" class="border-left" height="70" style="vertical-align:top">
-                            <div class="subscr-wrap">
-                                    <%= mf.description %>
-                                </div>
-                            </div>
-                        </td>
-                        <td rowspan="3" align="center" class="border-left" style="vertical-align:middle">
-                            <div class="nodesk trailer">
-                                
-                            </div>
-                        </td>
-                      </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-
-
--->
+</html>
