Changed the color of the account form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -473,7 +473,7 @@ a#searchicon.active { background-position:-51px 0px; }
      -webkit-appearance: none;
 	 }
 	 
-	 input:focus, textarea:focus, select:focus {outline-color: #c00;}
+	 input:focus, textarea:focus, select:focus {outline-color: #4CBFFF;}
 	 
 	 textarea {
      height: 55px;
@@ -482,7 +482,7 @@ a#searchicon.active { background-position:-51px 0px; }
    
    select {
      padding: 0.5em 1em 0.5em 0.75em;
-     background: #444 url("data:image/png,%89PNG%0D%0A%1A%0A%00%00%00%0DIHDR%00%00%0C%80%00%00%00%40%08%02%00%00%00W%AEz%EF%00%00%00%19tEXtSoftware%00Adobe%20ImageReadyq%C9e%3C%00%00%06CIDATx%DA%EC%DDMk%94W%18%06%E0g%26%A3%B6EM%D4%18%AD%FDp(%B4j%A1%26%C5%8D%3B%C7%95%81J%CD%AA%A0t%11i%F7%FA%0F%8C%FF%C0%7F%90q%E72n%BBq%DCtQ%10%26%B6%94F%A4Djm%EAg%02j%A3%C6%9C%CAXJ%91d%9C%19%CA%0C9%5E%17%EF%EE%3D%EFy%E1%5E%DF%3CO%E1%C0%81%03%01%00%00%00%00%00%00%00%00%B0%F6%7D%7B%E5J%97%FFX%14%3A%00%00%00%00%00%00%00%00%40g%14%B0%00%00%00%00%00%00%00%00%00%3AT%12%01%00%00%00%00%00%00%00%00%90%87%D4%F5%3F%96RJr%07%00%00%00%00%00%00%00%00%E8%80%09X%00%00%00%00%00%00%00%00%40%26z0%01K%E8%00%00%00%00%00%00%00%00%40%1E%BA_%C0*%0A%1D%00%00%00%00%00%00%00%00%A03%26%60%01%00%00%00%00%00%00%00%00%99%E8%C1%0A%C2%94%92%DC%01%00%00%00%00%00%00%00%00%3A%60%02%16%00%00%00%00%00%00%00%00%90%89%1EL%C0%12%3A%00%00%00%00%00%00%00%00%90%87%EE%17%B0%8AB%07%00%00%00%00%00%00%00%00%E8L)%A5%24%05%00%00%00%00%00%00%00%00%20%03V%10%02%00%00%00%00%00%00%00%00t%C8%0AB%00%00%00%00%00%00%00%00%805%C3%04%2C%00%00%00%00%00%00%00%00%20%13%3DXA%98R%92%3B%00%00%00%00%00%00%00%00%90%81%1E%14%B0%84%0E%00%00%00%00%00%00%00%00%E4%A1%FB%05%AC%A2%D0%01%00%00%00%00%00%00%00%00%3Ac%05!%00%00%00%00%00%00%00%00%90%09%2B%08%01%00%00%00%00%00%00%00%00%3Ad%05!%00%00%00%00%00%00%00%00%40%87RG%CF%FA%81%81%2F%AA%D5O*%95%0D%11%856%BF%ED%1B%1A%1A%92%3B%00%00%00%00%00%00%00%00%90%81%FD%B7o%B7%FB%C9%8E%91%91%13%B5%DA%FB%87%0E%ED%1D%1F%DFZ(%DC%AE%D5%9EE%2C%B7%FC%B9%09X%00%00%00%00%00%00%00%00%40%26%DA%9D%7D%B5%7F%7C%FCx%AD%B6i%F7%EE%97%9F%7F%7C%E6%CC%D8%D4%D4%7B%03%03%EBZ%BEA%01%0B%00%00%00%00%00%00%00%00%C8D%5B%ED%AB%A3%D5%EA%E8%E4%E4%FA%FE%FE%FF%DE%B0%ED%D8%B1%2Fk%B5OGF%DEn%EDB%2B%08%01%00%00%00%00%00%00%00%80L%7C%D6%DA%0A%C2%81r%F9%EBZ%AD%7C%E4%C8%8Ao%D7%ED%DC%F9%D1%F1%E3%1B%E6%E6%EE%D4%EB%AF%5DGh%02%16%00%00%00%00%00%00%00%00%90%89V%06_%ED%AET%BE%A9%D7%B7%0F%0F7%B9%A7%D8%DF%FF%F9%E4%E4%D1s%E7%B6F%F4YA%08%00%00%00%00%00%00%00%00%F0%C2%A1%89%89%13%97.%BD%B2vp5%1F%9C%3A%F5U%AD%F6%E1%C0%C0%86%D5%CF%94RJb%05%00%00%00%00%00%00%00%002%D0%BC%0B5P.%AF%8B%989%7Bvk%C4%3B%8D%D1V%85%A6%E7%97%1B%CF%F0%D8%D8%C3j%F5%5E%C4%D2JgJB%07%00%00%00%00%00%00%00%00%F2%D0%BC%80%B50%3B%FB%C3%C4%C4%BB%11%5BZ.N-G%3Cj%EC%19%2C%ACr%B9%02%16%00%00%00%00%00%00%00%00%90%89%E6%05%AC%97m%AA%DF%22n%B5y%E7%B3%C6%F8%2B%05%2C%00%00%00%00%00%00%00%00%20g%E9uo%9F4%9E%FFQ)%A5%24w%00%00%00%00%00%00%00%00%20%03%DD%EFB%15%85%0E%00%00%00%00%00%00%00%00%D0%19%2B%08%01%00%00%00%00%00%00%00%80Lt%7F%02%96%15%84%00%00%00%00%00%00%00%00%40%26zP%C0%12%3A%00%00%00%00%00%00%00%00%90%87%E6%05%AC%5D%23%23'k%B5%0D%FD%FD%AD_%F8ta%E1%D2%F8%F8%D5%A9%A9%C7%11%CFW%3AP%14%3A%00%00%00%00%00%00%00%00%90%87%D4%F4%99%AB%D7%CF%97%CB%F7%2F_n%F1%B6%A5%1B7nV*%7DSS%9B%22%0A%AB%DC%D9788(w%00%00%00%00%00%00%00%00%20%03%FB%EE%DEm~%60iq%F1%CFju%C7%96-%1B%0F%1El~2%5D%BC%F8ht%F4%EE%EC%EC%CD%88%DB%11%8B%11%CB%2B%1D3%01%0B%00%00%00%00%00%00%00%00%C8D%F3%09X%CF%23%1EF%FC%1Aq%F1%F4%E9%99%93'%97%17%16V%BBg%F9%EC%D9%3Bcc%3F%CF%CF_%89%B8%16%F1%E2%DC%D2*w*%60%01%00%00%00%00%00%00%00%00o%8A%14%F1%24%E2V%C4w%D5%EA%F7%95%CA%D3%E9%E9WO%2C%2C%3C%3B%7C%F8%E6%C4%C4%8F%11%F5%88%1B%11%8FW%99%7D%F5R%DF%B6m%DB%C4%0A%00%00%00%00%00%00%00%00d%60%DF%BD%7B%AD%1C%7B%1E%F1W%C4%9D%B9%B9%7B%17.%EC%DA%B7%EF%AD%BD%7B%FFy1%3D%FD%B8R%B9Q%AF%FF%14%F1%CB%8B%03%11O%1B%9D%AD%26%FA%06%07%07%E5%0E%00%00%00%00%00%00%00%00d%60ok%05%ACh%0C%B5z%12%F1%60q%F1%F7%0B%17%B6%17%0A%9B%2B%95%E7%E7%CF%CF%8F%8E%5E%9F%9F%BF%1Aq%3Db%BE%D1%D3z%AD%C2%9E%3D%7B%E4%0E%00%00%00%00%00%00%00%00d%60lf%A6%AD%F3%85%88%F5%11C%11%C3%E5%F2%E6%D9%D9%FB%11%D7%22%FE%88X%7C%DD%E0%AB%7F%95RJr%07%00%00%00%00%00%00%00%002%90%DA%3F%BF%18q%2B%E2%D1%EC%EC%C6%88%C7%8D%C1W%CF%DA%B9%A1%24t%00%00%00%00%00%00%00%00%E0M%B6%14q%3F%E2A%A3%8F%D5n%85K%01%0B%00%00%00%00%00%00%00%00%C8D%EA%FA%87V%10%02%00%00%00%00%00%00%00%00%99%E8~%17%CA%04%2C%00%00%00%00%00%00%00%00%20%13%DD%2F%60%15%85%0E%00%00%00%00%00%00%00%00%D0%19%13%B0%00%00%00%00%00%00%00%00%80L%F4%60%05aJI%EE%00%00%00%00%00%00%00%00%40%06zP%C0%12%3A%00%00%00%00%00%00%00%00%90%87%EE%17%B0%8AB%07%00%00%00%00%00%00%00%00%E8%8C%09X%00%00%00%00%00%00%00%00%40%26z%B0%820%A5%24w%00%00%00%00%00%00%00%00%20%03V%10%02%00%00%00%00%00%00%00%00%AC%19V%10%02%00%00%00%00%00%00%00%00%99%E8%C1%0AB%A1%03%00%00%00%00%00%00%00%00y%B0%82%10%00%00%00%00%00%00%00%00%60%CD(%A5%94%A4%00%00%00%00%00%00%00%00%00d%C0%04%2C%00%00%00%00%00%00%00%00%805%A3%24%02%00%00%00%00%00%00%00%00%20%0F%DD%9F%80%F5%B7%00%03%00%FF%B1%B68%FB%14rt%00%00%00%00IEND%AEB%60%82") no-repeat right center;
+     background: #444 ;
      -webkit-background-size: 1600px 32px;
    }
 	 
@@ -495,8 +495,8 @@ a#searchicon.active { background-position:-51px 0px; }
      color: white;
      padding: 0.25em 1em;
      line-height: 1.5em;
-     background: -webkit-gradient(linear, left top, left bottom, from(#a00), to(#600));
-     border: 2px solid #c00;
+     
+     border: 2px solid gray;
      text-shadow: 0 0 2px #300;
      font-weight: bold;
      -webkit-box-shadow: 1px 1px 3px #000;
