Issue #4. Added search functionality

--- a/views/apiPaginated.ejs
+++ b/views/apiPaginated.ejs
@@ -6,7 +6,7 @@
 			<% } %>
 		</div>
 		<a href="/m/<%= movie._id %>">
-			<img src="<%= movie.poster_small %>" style="width:185px;height:279px"/>
+			<img src="<%= movie.poster %>" style="width:185px;height:279px"/>
 			<div>
 				<span><%= movie.release_date %></span>
 				<p>Score: <%= movie.rating %></p>
