--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,9 +31,9 @@
             </div>
         </div>
         <div class="main" id="titletab">
-        	<input type="text" id="query" name="query" placeholder="Type in the title of the movie" />
-        	    <div class="opts">
-                	<a href="javascript:void(0);" class="gui" id="searchicon"></a>
+            <input type="text" id="query" class="searchBox" value="" placeholder="Type in the title of the movie" />         
+                <div class="opts">
+                    <a href="javascript:void(0);" class="gui" id="searchicon"></a>
                 </div>
         </div>
 
