Infinite scrolling for search view. issue #4.

--- a/views/find.ejs
+++ b/views/find.ejs
@@ -31,6 +31,7 @@
             </div>
         </div>
         <div class="main" id="titletab">
+            <input type="hidden" value="<%= keywords %>" id="findKeywords" />
         	<input type="text" id="query" name="query" placeholder="Type in the title of the movie" />
         	    <div class="opts">
                 	<a href="javascript:void(0);" class="gui" id="searchicon"></a>
