--- a/views/changelog.ejs
+++ b/views/changelog.ejs
@@ -1,6 +1,9 @@
 <% layout('layout') -%>
 
 <div class="text-box">
+  <h1>February 28, 2013</h1>
+    <p>Added support for editing and deleting movies in search view if you're an admin</p>
+
   <h1>February 27, 2013</h1>
     <p>Added user accounts</p>
     <p>Added admin support and admin panel</p>
