Added default views

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,10 +34,10 @@
 
   <div class="search-default">
     <div class="title">Or view by:</div>
-    <div class="option"> <a href="/search/release-date">Release Date</a> </div>
+    <div class="option"> <a href="/search/added-date">Added Date</a> </div>
     <span class="divider"></span>
     <div class="option"> <a href="/search/top">Rating</a> </div>
     <span class="divider"></span>
-    <div class="option"> <a href="/search/random">Random</a> </div>
+    <div class="option"> <a href="/search/release-date">Release Date</a> </div>
   </div>
 </div>
