404 images of movies are now replaced with a blank square

--- a/views/apiMoviesPaginated.ejs
+++ b/views/apiMoviesPaginated.ejs
@@ -1,7 +1,11 @@
 <% m.forEach(function(movie){ %>
   <div class="movie-box">
     <a href="/movie/<%= movie._id %>" target="_blank">
-      <img src="<%= movie.poster_medium %>" />
+      <% if (movie.poster_medium == '../img/undefined.jpg'){ %>
+        <div class="blank-square">Missing poster</div>
+      <% }else{ %>
+        <img src="<%= movie.poster_medium %>" />
+      <% } %>
     </a>
     <div class="movie-description">
       <p><%= movie.title %></p>
