--- a/public/css/style3.css
+++ b/public/css/style3.css
@@ -627,6 +627,17 @@ input:focus
   border-bottom: 1px solid #CFCFCF;
 }
 
+.movies-container .movie-box .blank-square{
+  display: inline-block;
+  background-color: black;
+  text-align: center;
+  font-size: 21px;
+  line-height: 14em;
+  margin: 10px 10px 0 10px;
+  width: 185px;
+  height: 275px;
+}
+
 .movies-container .movie-box .movie-description{
   margin: 5px 0 0 0;
   padding: 0;
