Better about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -33,4 +33,30 @@
 
   <h1 class="margin-title">Technologies involved</h1>
     <p>Tookie runs a worker every 3 hours who indexes all the new movies available in the first pages of torrentz. And then, for each movie found it querys the API v3 of TMDB and gets all the metadata and saves everything on a mongo database. </p>
+
+  <div class="notice">
+    <ul class="margined-list lefty">
+      <li><a href="http://nodejs.org/" target="_blank">node.js</a></li>
+      <li><a href="http://expressjs.com/" target="_blank">express.js</a></li>
+      <li><a href="http://code.google.com/p/embeddedjavascript/" target="_blank">ejs</a></li>
+    </ul>
+    <ul class="margined-list lefty">
+      <li><a href="http://www.mongodb.org/" target="_blank">mongodb</a></li>
+      <li><a href="http://mongoosejs.com/" target="_blank">mongoose</a></li>
+      <li><a href="https://github.com/ncb000gt/node.bcrypt.js/" target="_blank">bcrypt</a></li>
+    </ul>
+
+    <ul class="margined-list lefty">
+      <li><a href="http://passportjs.org/" target="_blank">passport.js</a></li>
+      <li><a href="https://github.com/caolan/async/" target="_blank">async</a></li>
+      <li><a href="https://github.com/randometc/ejs-locals" target="_blank">ejs-locals</a></li>
+    </ul>
+    <ul class="margined-list lefty">
+      <li><a href="https://github.com/mikeal/request/" target="_blank">request.js</a></li>
+      <li><a href="https://github.com/raqqa/node-tmdb/" target="_blank">node-tmdb</a></li>
+      <li><a href="https://nodejitsu.com/" target="_blank">nodejitsu</a></li>
+    </ul>
+
+    <div class="clear"></div>
+  </div>
 </div>
