--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -23,7 +23,7 @@
     <a id="poster-image" href="<%= movie.poster %>"><img src="<%= movie.poster %>" alt="<%= movie.title %>" /></a>
 
     <div class="movie-buttons">
-      <a href="/movie/feedback/<%= movie._id %>" data-fancybox-type="iframe" class="movie-feedback">feedback</a>
+      <a href="/movie/feedback/<%= movie._id %>" data-fancybox-type="iframe" class="movie-feedback">Feedback</a>
       <div class="trailer"><a href="#trailer">Watch Trailer</a></div>
       <a href="<%= movie.url %>">Download Movie</a>
 
