Improved about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,12 +3,11 @@
 <div class="text-box">
   <h1>About Tookie</h1>
     <p>Tookie is a meta-search engine that indexes movie torrents from <a href="http://torrentz.eu" target="_blank">torrentz</a> and presents all the information in a beautiful and responsive UI. It allows the user to view the information of the latest movies available out there along with the respective metadata (trailer, cast, release date, etc). And it also provides an external link to a .torrent file or a magnet link for downloading the movie.</p>
-    <p>And in case you're wondering, yes. Tookie is open-source and the code is hosted in <a href="https://github.com/sabarasaba/tookie" target="_blank">github</a>. Feel free to fork me =)</p>
+    <p>And in case you're wondering, yes. Tookie is open-source and the code is hosted in <a href="https://github.com/sabarasaba/tookie" target="_blank">github</a>. Feel free to fork it =)</p>
 
     <div class="notice">
       <ul>
         <li>Tookie does not host any files or torrents in any way, shape or form.</li>
-        <li>Tookie links to other independent search engines that might host torrent files. I have absolutely no control over those domains.</li>
         <li>Torrent files are simply metadata and cannot be copyrighted.</li>
       </ul>
     </div>
