Handling missing posters in movie view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
     <div class="search-filters">
       <div class="conector"></div>
         <div class="filter-container">
+          <p>Filters</p>
           <div class="filter-inputs right-separator lefty">
             <input type="text" name="filter1" placeholder="random value" />
             <input type="text" name="filter2" placeholder="random value" />
