--- a/public/css/style3.css
+++ b/public/css/style3.css
@@ -361,8 +361,14 @@ input:focus
   background-color: #5BC4C2;
   width: 80%;
   margin: 0 auto;
-  height: 150px;
+  height: 190px;
   border-radius: 6px;
+}
+
+.search-filters p{
+  margin: 0;
+  margin-bottom: 5px;
+  padding: 0;
 }
 
 .filter-container{
@@ -775,11 +781,22 @@ input:focus
   text-align: center;
 }
 
+.movie-container .movie-links .blank-square{
+  display: inline-block;
+  background-color: black;
+  text-align: center;
+  font-size: 21px;
+  line-height: 14em;
+  margin: 10px 10px 0 10px;
+  width: 80%;
+  height: 80%;
+}
+
 .movie-container .movie-links img{
   margin-top: 20px;
   padding-bottom: 20px;
-  width: 80%;
-  height: 80%;
+  width: 70%;
+  height: 70%;
 
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 1px 0 0 rgba(255, 255, 255, 0.11);
@@ -807,6 +824,7 @@ input:focus
   width: 68%;
   min-height: 600px;
   padding-left: 15px;
+  padding-bottom: 60px;
 
   border-left: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 1px 0 0 rgba(255, 255, 255, 0.11);
