--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -20,7 +20,11 @@
   </div>
 
   <div class="movie-links lefty">
-    <a id="poster-image" href="<%= movie.poster %>"><img src="<%= movie.poster %>" alt="<%= movie.title %>" /></a>
+      <% if ((movie.poster_medium == '../img/undefined.jpg') || (movie.poster_medium == 'images/undefined.jpg')){ %>
+        <div class="blank-square">Missing poster</div>
+      <% }else{ %>
+        <a id="poster-image" href="<%= movie.poster %>"><img src="<%= movie.poster %>" alt="<%= movie.title %>" /></a>
+      <% } %>
 
     <div class="movie-buttons">
       <a href="/movie/feedback/<%= movie._id %>" data-fancybox-type="iframe" class="movie-feedback">Feedback</a>
